--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 #root {
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
 }
 
 // primary colour
@@ -20,3 +21,7 @@ $quinary: #3f5159;
 
 // senary colour
 $senary: #151b1d;
+
+.App {
+  background: $senary;
+}
