--- a/src/components/svg/SvgHub.scss
+++ b/src/components/svg/SvgHub.scss
@@ -1,4 +1,5 @@
-$icon-radius: 3svw;
+$icon-radius: 4svw;
+$padding-radius: 0.5svw;
 $items: 15;
 
 :root {
@@ -20,17 +21,24 @@ $items: 15;
   position: absolute;
   width: $icon-radius;
   height: $icon-radius;
+  padding: $padding-radius;
   will-change: animation transition transform opacity left top;
   opacity: var(--opacity);
+  &:hover {
+    padding: 0;
+    transition: padding 200ms ease-in-out;
+    filter: drop-shadow(0 0 0.3rem #3f5159);
+    cursor: pointer;
+  }
 }
 
 @for $i from 1 through $items {
   .circle-container > :nth-child(#{$i}) {
     $angle: (calc(360deg / $items) * ($i - 1)); // calculate the angle for each icon
-    left: calc(50% + #{cos($angle)} * var(--radius) / 2 - (#{$icon-radius} / 2)); // position the icon along the x-axis
-    top: calc(50% + #{sin($angle)} * var(--radius) / 2 - (#{$icon-radius} / 2)); // position the icon along the y-axis
+    left: calc(50% + #{cos($angle)} * var(--radius) / 2 - (#{$icon-radius} / 2) - (#{$padding-radius} / 2)); // position the icon along the x-axis
+    top: calc(50% + #{sin($angle)} * var(--radius) / 2 - (#{$icon-radius} / 2) - (#{$padding-radius} / 2)); // position the icon along the y-axis
     position: absolute;
-    transition: left 1100ms cubic-bezier(0.175, 0.885, 0.32, 1.275), top 1100ms cubic-bezier(0.175, 0.885, 0.32, 1.275), opacity 500ms ease;
+    transition: left 900ms cubic-bezier(0.175, 0.885, 0.32, 1.275), top 1100ms cubic-bezier(0.175, 0.885, 0.32, 1.275), opacity 500ms ease;
   }
 }
 
